--- a/src/renderer/src/components/repository-workspace/TableWorkspace/TableWorkspace.css
+++ b/src/renderer/src/components/repository-workspace/TableWorkspace/TableWorkspace.css
@@ -5,5 +5,10 @@
 */
 
 .table-workspace {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+
+  flex-grow: 1;
   overflow: hidden;
 }
